# CMakeStudy

./: README.md
Eval_Android/: settings.gradle
Eval_Android/app/: build.gradle
Eval_Android/app/src/androidTest/java/org/nunocky/eval_android/: ExampleInstrumentedTest.kt
Eval_Android/app/src/main/: AndroidManifest.xml
Eval_Android/app/src/main/java/org/nunocky/eval_android/: MainActivity.kt
Eval_Android/app/src/main/res/values/: strings.xml  themes.xml
Eval_Android/app/src/main/res/values-night/: themes.xml
Eval_Android/app/src/test/java/org/nunocky/eval_android/: ExampleUnitTest.kt
Eval_Android/gradle/wrapper/: gradle-wrapper.properties
Eval_Android/mylibrary/: build.gradle
Eval_Android/mylibrary/src/androidTest/java/org/nunocky/mylibrary/: ExampleInstrumentedTest.java
Eval_Android/mylibrary/src/main/: AndroidManifest.xml  CMakeLists.txt
Eval_Android/mylibrary/src/main/cpp/: native-lib.cpp
Eval_Android/mylibrary/src/main/java/org/nunocky/mylibrary/: MyLibrary.java
Eval_Android/mylibrary/src/main/libX/: CMakeLists.txt
Eval_Android/mylibrary/src/main/libY/: CMakeLists.txt
Eval_Android/mylibrary/src/test/java/org/nunocky/mylibrary/: ExampleUnitTest.java
Eval_macOS/: CMakeLists.txt  README.md  main.cc
Eval_macOS/libX/: CMakeLists.txt
Eval_macOS/libY/: CMakeLists.txt
include/X/: libX.h
include/Y/: libY.h
src/X/: libX.cc
src/Y/: libY.cc
